Fixed horiz scrollbar

--- a/src/assets/page.styles.scss
+++ b/src/assets/page.styles.scss
@@ -15,7 +15,8 @@ section + section {
 }
 
 .section-title {
-    @apply w-screen h-screen p-5 bg-light-gray bg-cover bg-no-repeat;
+    @apply w-screen p-5 bg-light-gray bg-cover bg-no-repeat;
+    height: calc(100vh - 48px);
 
     .section-border {
         @apply w-full h-full border border-dark-gray;
